# NiChart_SPARE

./: .gitignore  MANIFEST.in  README.md  commands.sh  install.sh  requirements.txt  setup.cfg  setup.py
Models/: SPARE-AD-new.joblib  SPARE-BA-new-HT-CL-linear_fast.joblib  SPARE-BA-new-HT-CL-linear_fast2.joblib  SPARE-BA-new-HT-linear_fast.joblib
Models/final_models/: SPARE-BA-Harmonized-HT-linear_fast-BC.joblib  SPARE-BA-Harmonized-HT-linear_fast-noBC.joblib
NiChart_SPARE/: README.md  __init__.py  __main__.py  data_analysis.py  data_prep.py  svm.py  trainer.py  util.py
NiChart_SPARE/pipelines/: __init__.py  spare_ad.py  spare_ba.py  spare_ht.py  spare_svm_classification.py  spare_svm_regression.py
Resources/: covparams_scaler_sparecvms.csv
