[metadata]
name = NiChart_SPARE
version = 0.1.0
description = SPARE scores calculation from Brain ROI Volumes
long_description = file: README.md
long_description_content_type = text/markdown
author = CBICA
author_email = software@cbica.upenn.edu
url = https://github.com/CBICA/NiChart_SPARE
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Scientific/Engineering :: Artificial Intelligence
keywords = neuroimaging, brain, SPARE, machine learning, medical imaging
project_urls =
    Bug Reports = https://github.com/CBICA/NiChart_SPARE/issues
    Source = https://github.com/CBICA/NiChart_SPARE
    Documentation = https://github.com/CBICA/NiChart_SPARE/wiki

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    scipy>=1.7.0
include_package_data = True
zip_safe = False

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.8

[options.entry_points]
console_scripts =
    NiChart_SPARE = NiChart_SPARE.__main__:main

[options.packages.find]
include = NiChart_SPARE*

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = -v --tb=short

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist

[black]
line-length = 88
target-version = py37
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
